# fprog-2023g1

./: .gitignore  README.md
sheet_1/: Task00.hs  Task11.hs  Task12.hs  Task13.hs  Task14.hs  Task16.hs
sheet_2/: Task21.hs  Task23.hs  Task25.hs  Task26.hs
sheet_3/: Task31.hs  Task32.hs  Task33.hs  Task35.hs
sheet_4/: Task41.hs  Task42.md  Task43.hs  Task44.hs  Task45.hs
sheet_5/: Task51.hs  Task52.md  Task53.hs  Task54.hs  Task55.hs  Task56.hs
sheet_6/: Deque.hs  MyQueue.hs  MyStack.hs  MyVector.hs  Task62.hs  Task63.hs  Task64.hs  Task65.hs  TicTacToe.hs
sheet_7/: build  deps  sheet7.cabal
sheet_7/src/: Deque.hs  SortedList.hs  Task71.hs  Task72.hs  Task73.hs  Task75.hs
sheet_8/: U.test.txt  build  sheet8.cabal  test.txt
sheet_8/src/: DiceRoller.hs  SortedList.hs  Task82.hs  Task84.hs  Task85.hs
sheet_9/: build  sheet9.cabal  source.txt
sheet_9/src/: Task91.hs  Task92.hs  Task93.hs  Task94.hs
