cabal-version:      2.4
name:               sheet9
version:            0.1.0.0

author:             Bernhard Birnbaum
maintainer:         bernhard.birnbaum@ovgu.de

executable Task92
    main-is:          Task92.hs
    build-depends:    base ^>=4.17.2.0, random
    hs-source-dirs:   src
    default-language: Haskell2010
